fix(editor): Improve the contrast in the Chat Window in dark mode (no-changelog)

--- a/packages/design-system/src/css/_tokens.dark.scss
+++ b/packages/design-system/src/css/_tokens.dark.scss
@@ -35,7 +35,7 @@
 
 	// LangChain
 	--color-lm-chat-messages-background: var(--prim-gray-820);
-	--color-lm-chat-bot-background: var(--prim-gray-540);
+	--color-lm-chat-bot-background: var(--prim-gray-740);
 	--color-lm-chat-bot-border: var(--prim-gray-490);
 	--color-lm-chat-user-background: var(--prim-color-alt-a-shade-100);
 	--color-lm-chat-user-border: var(--prim-color-alt-a);
